# arxybin

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: Bitcrusher.cpp  Bitcrusher.h  BufferShuffler.cpp  BufferShuffler.h  Distortion.cpp  Distortion.h  Grain.cpp  Grain.h  GranularEngine.cpp  GranularEngine.h  LfoEngine.cpp  LfoEngine.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StutterEffect.cpp  StutterEffect.h  arxybin.rc
Source/UI/: ArxybinLookAndFeel.cpp  ArxybinLookAndFeel.h  ModWindow.cpp  ModWindow.h  ParticleBackground.cpp  ParticleBackground.h  WaveformViewer.cpp  WaveformViewer.h
docs/: 01_项目概述与需求讨论.md  02_需求总结与当前进度.md  Linux移植修改说明.md  macOS移植修改说明.md  移植修改说明.md
presets/: Like a wave.arxybin  some fifth..arxybin
presets/factory/: default.arxybin  distort dash..arxybin
release/: setup.iss
release/arxybin_v1.0.0/: fresh stars..arxybin
release/arxybin_v1.0.0/arxybin..vst3/Contents/Resources/: moduleinfo.json
release/arxybin_v1.0.0_x64/arxybin_v1.0.0/: README.txt  安装_Install.cmd
